tests/NormalTests/paczka1/small_fuzzy/41577216.err
Error in line 14: JOEAFek8xFX A334 94,45
